--- a/server/public/login.html
+++ b/server/public/login.html
@@ -80,7 +80,7 @@
             import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
 
             const QrID = { id: uuidv4() };
-            const endpoint = "http://10.1.2.16:4000";
+            const endpoint = "https://auth-student.selendra.org";
             const socket = io(endpoint);
 
             new QRCode(document.getElementById("qrcode"), JSON.stringify(QrID));
