--- a/server/public/scan.html
+++ b/server/public/scan.html
@@ -21,7 +21,7 @@
             }
 
             import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
-            const endpoint = "http://10.1.2.16:4000";
+            const endpoint = "https://auth-student.selendra.org";
             const socket = io(endpoint, {
                 extraHeaders: {
                     authorization: window.localStorage.getItem("token") || "",
